added cohort by user API
